--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TechSchool.com - Learn Technical Skills</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TechSchool.com</title>
   <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
-    }
     body {
-      background-color: #f4f7fa;
-      color: #333;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fff0f5;
     }
     header {
-      background-color: #1e88e5;
+      background-color: #ff69b4;
       color: white;
-      padding: 20px 40px;
-      text-align: center;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    header h1 {
-      font-size: 2.5em;
+    .logo {
+      display: flex;
+      align-items: center;
     }
-    nav {
-      margin-top: 10px;
+    .logo img {
+      height: 40px;
+      margin-right: 10px;
     }
-    nav a {
+    nav a, .login-buttons a {
       color: white;
-      margin: 0 15px;
       text-decoration: none;
+      margin: 0 15px;
       font-weight: bold;
     }
     .hero {
       text-align: center;
-      padding: 60px 20px;
-      background: #e3f2fd;
+      padding: 50px 20px;
+      background-color: #ffe4f1;
     }
-    .hero h2 {
-      font-size: 2em;
-      margin-bottom: 10px;
+    .hero h1 {
+      font-size: 32px;
     }
     .courses {
       display: grid;
@@ -47,85 +46,75 @@
       gap: 20px;
       padding: 40px;
     }
-    .course {
-      background: white;
+    .course-card {
+      background-color: white;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    .course h3 {
-      margin-bottom: 10px;
-      color: #1e88e5;
-    }
-    .about, .contact {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
     }
     footer {
-      background: #1e88e5;
+      background-color: #ff69b4;
       color: white;
-      text-align: center;
       padding: 20px;
-      margin-top: 40px;
+      text-align: center;
     }
-    .btn {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 10px;
-      background: #1e88e5;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
+    .login-buttons {
+      display: flex;
+      gap: 10px;
+    }
+    .login-buttons a {
+      background: white;
+      color: #ff69b4;
+      padding: 5px 10px;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>TechSchool.com</h1>
+    <div class="logo">
+      <img src="your-logo.png" alt="Logo" />
+      <h1>TechSchool.com</h1>
+    </div>
     <nav>
       <a href="#courses">Courses</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
+    <div class="login-buttons">
+      <a href="/login/admin.html">Admin Login</a>
+      <a href="/login/student.html">Student Login</a>
+    </div>
   </header>
 
   <section class="hero">
-    <h2>Empower Your Future with In-Demand Tech Skills</h2>
+    <h1>Empower Your Future with In-Demand Tech Skills</h1>
     <p>Join thousands of learners building skills in data, cloud, and software.</p>
-    <a href="#courses" class="btn">Explore Courses</a>
+    <a href="#courses" style="background:#ff69b4; color:white; padding:10px 20px; border-radius:5px; text-decoration:none;">Explore Courses</a>
   </section>
 
   <section class="courses" id="courses">
-    <div class="course">
-      <h3>Snowflake for Beginners</h3>
+    <div class="course-card">
+      <a href="/admin-upload/snowflake.html"> <strong>Snowflake for Beginners</strong></a>
       <p>Learn cloud data warehousing using Snowflake's modern architecture and SQL features.</p>
     </div>
-    <div class="course">
-      <h3>Databricks Essentials</h3>
+    <div class="course-card">
+      <a href="/admin-upload/databricks.html"><strong>Databricks Essentials</strong></a>
       <p>Understand Spark, notebooks, and data engineering on the Databricks Lakehouse platform.</p>
     </div>
-    <div class="course">
-      <h3>Power BI Dashboarding</h3>
-      <p>Visualize your data using Microsoft's leading BI tool, with real-world projects.</p>
+    <div class="course-card">
+      <a href="/admin-upload/powerbi.html"><strong>Power BI Dashboarding</strong></a>
+      <p>Visualize your data using Microsoft’s leading BI tool, with real-world projects.</p>
     </div>
-    <div class="course">
-      <h3>Python for Data Analysis</h3>
+    <div class="course-card">
+      <a href="/admin-upload/python.html"><strong>Python for Data Analysis</strong></a>
       <p>Master Python programming focused on data tasks, with Pandas and NumPy.</p>
     </div>
   </section>
 
-  <section class="about" id="about">
-    <h2>About TechSchool</h2>
-    <p>TechSchool.com is your learning hub for practical, hands-on technical courses. Created by experienced mentors, we make complex concepts simple for students of all levels. Whether you're aiming for a tech job or want to build projects, we help you build the right skills fast.</p>
-  </section>
-
-  <section class="contact" id="contact">
-    <h2>Contact Us</h2>
-    <p>Have questions or want to collaborate? Reach out via <a href="mailto:info@techschool.com">info@techschool.com</a> or connect via WhatsApp: <a href="https://wa.me/919000000000">+91 90000 00000</a></p>
-  </section>
-
   <footer>
+    <p>Contact us at 📞 6303308388 | ✉️ nagamuneiah01@gmail.com</p>
     <p>&copy; 2025 TechSchool.com. All rights reserved.</p>
   </footer>
 </body>
